--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,20 @@
 
 @layer base {
   body {
-    @apply overflow-hidden text-primary font-secondary bg-white;
+    @apply text-primary font-secondary bg-white;
   }
 
   .h1 {
     @apply text-[54px] lg:text-[108px] font-primary font-bold capitalize leading-[120%] tracking-[-0.05em] mb-2;
   }
 
-  .h2 {
-    @apply text-[18px]
+  .h2{
+    letter-spacing: 0.5px;
+    font-size: 18px;
+  }
+
+  .h3 {
+    @apply text-[36px] lg:text-[64px] font-primary font-bold capitalize leading-[120%] tracking-[-0.05em] mb-2;
   }
 
   .section {
@@ -34,4 +39,12 @@
 .bw-image:hover {
   filter: grayscale(0%);
   /* Change to color on hover */
+}
+
+img {
+  object-fit: cover; /* Image always covers the container */
+  object-position: center; /* Center the image within the container */
+}
+span{
+  text-decoration: line-through;
 }
